example_one/ingress-nginx.yaml
apiVersion: networkingk8s.io/V1
kind: Ingress
metadata:
  name: nginx-ingress
spec: 
  rules:
  - http: 
      paths: 
      - path: /
        pathType: Prefix
        backend: 
          service: 
            name: nginx-clusterip 
            port: 
              number: 80
